<resources>
    <string name="app_name" translatable="false">Space Launch</string>
    <string name="add_mob_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ok">Ok</string>
    <string name="default_error">Please try again later</string>
    <string name="pls_check_connection">Check Your Internet Connection And Try Again Later</string>
    <string name="all_launches">All Launches</string>
    <string name="next_launch">Upcoming</string>

    <string name="days">Days</string>
    <string name="hrs">HRs</string>
    <string name="mins">MINs</string>
    <string name="secs">SECs</string>
    <string name="settings">Settings</string>

    <string name="there_is_no">There is no data available for this launch</string>
    <string name="view_on_map"><u> <font color='#0000EE' size='18'>View On Map</font></u></string>
    <string name="no_map">There is no map available</string>
    <string name="appwidget_text">Click Here To See Launches Details</string>
    <string name="click_here_to_see_details">Click here to see launch details</string>
    <string name="change_lang">Change Language</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="cancel">Cancel</string>
    <string name="launch_img">Image of Launch Rocket</string>
    <string name="alreadt_had_account">Already had an account ?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_did_not_match">Password not match</string>
    <string name="confirm_password_error">Password is empty</string>
    <string name="error_password_length_max">Password must be less than 24 charachters</string>
    <string name="error_password_length_min">Password must be bigger than 8 charachters</string>
    <string name="password_error_register">Passowrd is empty</string>
    <string name="enter_email_error">Enter a valid email</string>
    <string name="enter_email_empty">Email is Empty</string>
    <string name="username_error">Name is Empty</string>
    <string name="error_register_before">This email is already exist</string>
    <string name="error_register">Please try again later</string>
    <string name="register_successfully">Congratulations !</string>
    <string name="login">Sign In</string>
    <string name="do_not_have_account">Do not have an account</string>
    <string name="error_email_or_phone_empty">Email is empty</string>
    <string name="login_error">Please try again</string>
    <string name="log_out">Log out</string>
    <string name="db_name">space_launch_database</string>
    <string name="app_logo">Application Logo</string>
</resources>
