<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="0.7"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_15sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/change_language"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_18ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="#eeeeee" />

            <my.apps.udacity.nano.degree.space.launch.utilites.CairoRegularTextView
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/english"
                android:textColor="@color/pdlg_color_black"
                android:textSize="@dimen/_12ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="#eeeeee" />

            <my.apps.udacity.nano.degree.space.launch.utilites.CairoRegularTextView
                android:id="@+id/arabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/arabic"
                android:textColor="@color/pdlg_color_black"
                android:textSize="@dimen/_14ssp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="0dp">

        <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldButton
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp" />
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>