<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".fragemnts.HomeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/next_launch"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_22ssp" />

        <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
            android:id="@+id/launch_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_16ssp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/launch_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:contentDescription="@string/launch_img"
            android:scaleType="fitXY" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                    android:id="@+id/txt_days"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="00"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_10ssp" />

                <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/days"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_8ssp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:gravity="top|center"
                android:text=":"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_weight="1"

                android:orientation="vertical">

                <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                    android:id="@+id/txt_hrs"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="00"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_8ssp" />

                <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hrs"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_10ssp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"

                android:layout_weight="0.2"
                android:gravity="top|center"
                android:text=":"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                    android:id="@+id/txt_mins"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:layout_weight="1"

                    android:gravity="center"
                    android:text="00"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_10ssp" />

                <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mins"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_8ssp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:gravity="top|center"
                android:text=":"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_weight="1"

                android:orientation="vertical">

                <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                    android:id="@+id/txt_secs"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="00"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_10ssp" />

                <my.apps.udacity.nano.degree.space.launch.utilites.CairoBoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/secs"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_8ssp" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>